# pico-examples

./: CMakeLists.txt
blink/: blink.c
hello_world/usb/: hello_usb.c
i2c/: CMakeLists.txt
i2c/aht20_i2c/: CMakeLists.txt  README.adoc  aht20_i2c.c  pico-examples.code-workspace
i2c/bus_scan/: bus_scan.c
i2c/sht30d_i2c/: CMakeLists.txt  README.adoc  pico-examples.code-workspace  sht30d_i2c.c  sht30d_i2c.h
multicore/multicore_runner/: multicore_runner.c
pico_w/wifi/: CMakeLists.txt
pico_w/wifi/blink/: picow_blink.c
pico_w/wifi/ntp_client/: picow_ntp_client.c
pico_w/wifi/tcp_client/: picow_tcp_client.c
spi/: CMakeLists.txt
spi/max31865_spi/: CMakeLists.txt  max31865_spi.c  max31865_spi.h
